@@ -1,12 +1,9 @@
 package com.example.demo.service.impl;
 
 import com.example.demo.entity.Location;
-import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.repository.LocationRepository;
 import com.example.demo.service.LocationService;
 import org.springframework.stereotype.Service;
-
-import java.util.List;
 
 @Service
 public class LocationServiceImpl implements LocationService {
@@ -19,11 +16,8 @@ public class LocationServiceImpl implements LocationService {
 
     @Override
     public Location createLocation(Location location) {
-        if (location.getRegion() == null || location.getRegion().trim().isEmpty()) {
+        if (location.getRegion() == null || location.getRegion().isBlank()) {
             throw new IllegalArgumentException("region required");
-        }
-        if (location.getLocationName() == null || location.getLocationName().trim().isEmpty()) {
-            throw new IllegalArgumentException("locationName required");
         }
         return locationRepository.save(location);
     }
@@ -31,11 +25,6 @@ public class LocationServiceImpl implements LocationService {
     @Override
     public Location getLocation(Long id) {
         return locationRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Location not found with id: " + id));
-    }
-
-    @Override
-    public List<Location> getAllLocations() {
-        return locationRepository.findAll();
+                .orElseThrow(() -> new RuntimeException("Location not found"));
     }
 }
